--- a/src/style.css
+++ b/src/style.css
@@ -16,13 +16,14 @@ body{
 	color:#045;
 }
 
-#quoteContainer{
+#quotebox{
 	width:75%;
 	background: #00a850;
 	padding:10px;
 	margin:30px auto;
 	text-align: center;
-  height:70px;
+ 	 height:70px;
+ 	color:#d2c155;
 }
 #buttonContainer{
 	width: 100%;
@@ -51,16 +52,34 @@ body{
 #quoteButton{
 	display: inline-block;
 }
-#quoteGenius{
+#quoteauthor{
 	font-style: italic;
 	font-weight: 600;
 	text-align: center;
+ 	 position: fixed;
+ 	top: 15%;
+  	left: 54%;
+  	margin-top: -50px;
+ 	margin-left: -100px;
 }
 
 #logo {
-	position: fixed;
+	position: absolute;
 	bottom: 0;
+	left: 0;
 	width: 100%;
+}
+
+#pipeyman {
+	position: absolute;
+	bottom: 100px;
+	right: 100px;
+}
+
+#githubacc {
+	position: absolute;
+	width:75%;
+ 	height:5%;
 }
 
 /*MEDIA QUERIES*/
